# 3lc-compute-plugin-timm

./: README.md  pyproject.toml
src/tlc_plugin_timm/: __init__.py  config_store.py  model_registry.py  plugin.toml  routes.py  task_detection.py  trainer.py  ui.html
