# 3lc-compute-plugin-timm — the timm (PyTorch Image Models) training plugin for the 3LC compute service,
# as a standalone single-plugin distribution with its own heavy timm/torch stack version cadence.
#
# Isolation contract: this distribution is NEVER installed into the host venv. The host discovers
# the plugin via a folder Source pointed at `src/` (dev) or installs it into its OWN managed venv
# (shop/index/git). The heavy stack lives behind the `[timm]` extra named by the manifest's
# runtime.provision_extra and is installed ONLY into that provisioned venv. Base `dependencies` is
# the SDK floor only.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "3lc-compute-plugin-timm"
version = "0.1.1"
description = "timm image-classification training plugin for the 3LC compute service (venv-isolated)."
requires-python = ">=3.10"
# Apache-2.0, matching 3lc-plugin-sdk. Full text in ./LICENSE.
license = "Apache-2.0"
# Base = the SDK floor ONLY. The heavy stack rides the [timm] extra below and is installed only
# into the plugin's provisioned venv. [shared] = the SDK's optional `tlc` data plane.
dependencies = [
    "3lc-plugin-sdk[shared]>=0.1.0,<0.2.0",
]

# The plugin's heavy stack — installed ONLY into the provisioned venv (uv sync --extra timm, or
# 3lc-compute-plugin-timm[timm]==<ver> from an index).
[project.optional-dependencies]
timm = [
    "timm>=1.0",
    "torch",
    "torchvision",
    # Dimensionality reduction: the plugin materializes pacmap/umap-reduced tables in its OWN
    # provisioned venv, so it needs tlc's PacmapTable/UmapTable (pacmap / umap-learn / joblib /
    # scikit-learn / annoy). Go through the `3lc[pacmap,umap]` extras rather than raw pins so the
    # full dep set and version bounds track the monorepo. `[shared]` brings `3lc[pandas]`; unioned
    # here that yields `3lc[pandas,pacmap,umap]` in the venv. Mirrors the host's spec in 3lc-compute.
    "3lc[pacmap,umap]>=3.0.0,<4.0.0",
]

# Advertised for the optional installed-package / index-install discovery path. Value = the import
# package; its bundled plugin.toml drives id/ui/runtime (and the provision extra).
[project.entry-points."tlc_compute.plugins"]
timm = "tlc_plugin_timm"

[tool.hatch.build.targets.wheel]
packages = ["src/tlc_plugin_timm"]

# torch/torchvision from the CUDA 12.6 index on Linux — used only when the [timm] extra is selected
# during venv provisioning (not on a bare install).
[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

# 3lc releases index — 3lc versions not yet on public PyPI.
[[tool.uv.index]]
name = "3lc-releases"
url = "https://pypi.3lc.ai/public/repositories/releases-public"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126", marker = "sys_platform == 'linux'" }
torchvision = { index = "pytorch-cu126", marker = "sys_platform == 'linux'" }
# 3lc resolves from the releases index; 3lc-plugin-sdk resolves from its GitHub repo. For
# side-by-side local dev, override these UNCOMMITTED, e.g.
#   3lc-plugin-sdk = { path = "../3lc-plugin-sdk", editable = true }
3lc = { index = "3lc-releases" }
3lc-plugin-sdk = { git = "https://github.com/3lc-ai/3lc-plugin-sdk.git", branch = "main" }

# Ruff config mirrors 3lc-plugin-sdk for a consistent house style. CI runs ruff standalone (uvx) —
# linting must not require resolving the heavy ML stack.
[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [".git", ".mypy_cache", ".ruff_cache", ".venv", "build", "dist"]

[tool.ruff.lint]
select = ["A", "C4", "E", "EM", "F", "I", "N", "PIE", "RUF", "SIM", "UP", "W"]
ignore = ["N806", "N818", "SIM105", "SIM108", "RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
preview = true
docstring-code-format = true
